remove default injected, only support EIP6963

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ Click "Connect wallet" to connect to your browser extension wallet. Otherwise us
 
 
 
-    <button id="connect-wallet">Connect Metamask (default injected provider)</button>
+    <!--<button id="connect-wallet">Connect Metamask (default injected provider)</button>-->
     <button id="connect-other-wallets">Other wallets</button>
 
     <!-- 'checkAcct' button initially disabled -->
