change Ethereum RPC due to rate limiting

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@ There are 2 ethereum RPCs to handle load balancing
     </pre>
 
     <label for="ethRPC">Ethereum RPC</label>
-    <input type="text" id="ethRPC" name="ethRPC" value="https://cloudflare-eth.com">
+    <input type="text" id="ethRPC" name="ethRPC" value="https://eth.llamarpc.com">
     <br>
     <label for="ethRPC">Ethereum RPC</label>
     <input type="text" id="ethRPCv1" name="ethRPCv1" value="https://rpc.ankr.com/eth">
