change RPC due to rate limiting

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ There are 2 ethereum RPCs to handle load balancing
     <input type="text" id="ethRPC" name="ethRPC" value="https://eth.llamarpc.com">
     <br>
     <label for="ethRPC">Ethereum RPC</label>
-    <input type="text" id="ethRPCv1" name="ethRPCv1" value="https://rpc.ankr.com/eth">
+    <input type="text" id="ethRPCv1" name="ethRPCv1" value="https://eth.drpc.org>
     <br>
     <label for="bnbRPC">Binance RPC</label>
     <input type="text" id="bnbRPC" name="bnbRPC" value="https://bsc-dataseed.binance.org/">
